# eigd

./: pyproject.toml
eigd/: arpack.py  eigenvector_derivatives.py
examples/: natural_frequency.py  thermal.py
